err/pygltools.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyGLtools'...
Compiling './lib/python3.5/site-packages/PyGLtools/__init__.py'...
***   File "./lib/python3.5/site-packages/PyGLtools/__init__.py", line 99
    print "A is not sorted.  Please use a pyglSort."
                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/PyGLtools/browser.py'...
***   File "./lib/python3.5/site-packages/PyGLtools/browser.py", line 64
    print "Valid column numbers must be given.  Column numbering starts with 1.  The 6 required PGL columns cannot be used."
                                                                                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/PyGLtools/closest.py'...
***   File "./lib/python3.5/site-packages/PyGLtools/closest.py", line 82
    print "\t".join(["#fileA_chrA","fileA_startA","fileA_stopA","fileA_chrB","fileA_startB","fileA_stopB",
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/PyGLtools/closest1D.py'...
***   File "./lib/python3.5/site-packages/PyGLtools/closest1D.py", line 161
    print "\t".join(["#chrA","startA","stopA","chrB","startB","stopB","closestChr","closestStart","closestStop","distance"])
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/PyGLtools/condense.py'...
***   File "./lib/python3.5/site-packages/PyGLtools/condense.py", line 18
    print header
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/PyGLtools/conveRt.py'...
***   File "./lib/python3.5/site-packages/PyGLtools/conveRt.py", line 41
    print "Valid column numbers must be given.  Column numbering starts with 1.  Cannot use required PGL column."
                                                                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/PyGLtools/coverage.py'...
***   File "./lib/python3.5/site-packages/PyGLtools/coverage.py", line 166
    print "stdin can only be used for either a or b"
                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/PyGLtools/expand.py'...
***   File "./lib/python3.5/site-packages/PyGLtools/expand.py", line 22
    print "Genome file has more than 2 columns"
                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/PyGLtools/findLoops.py'...
***   File "./lib/python3.5/site-packages/PyGLtools/findLoops.py", line 72
    print "-stdInA and -a cannot be used simultaneously"
                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/PyGLtools/intersect.py'...
***   File "./lib/python3.5/site-packages/PyGLtools/intersect.py", line 259
    print "stdin can only be used for either a or b"
                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/PyGLtools/intersect1D.py'...
***   File "./lib/python3.5/site-packages/PyGLtools/intersect1D.py", line 313
    print headerB
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/PyGLtools/juicebox.py'...
***   File "./lib/python3.5/site-packages/PyGLtools/juicebox.py", line 43
    print "Valid column numbers must be given.  Column numbering starts with 1.  Cannot use one of the required PGL columns."
                                                                                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/PyGLtools/merge.py'...
***   File "./lib/python3.5/site-packages/PyGLtools/merge.py", line 277
    print _createHeader(header.split(),cols,commands,useOld)
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/PyGLtools/pgltools_library.py'...
***   File "./lib/python3.5/site-packages/PyGLtools/pgltools_library.py", line 65
    print line
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/PyGLtools/samTopgl.py'...
***   File "./lib/python3.5/site-packages/PyGLtools/samTopgl.py", line 33
    print "either -stdInA or -a must be used"
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/PyGLtools/subtract.py'...
***   File "./lib/python3.5/site-packages/PyGLtools/subtract.py", line 210
    print "stdin can only be used for either a or b"
                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/PyGLtools/subtract1D.py'...
***   File "./lib/python3.5/site-packages/PyGLtools/subtract1D.py", line 158
    print "stdin can only be used for either a or b"
                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/PyGLtools/window.py'...
***   File "./lib/python3.5/site-packages/PyGLtools/window.py", line 95
    print "Either window1, window2, or window1 and window2 must be provided"
                                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/PyGLtools-2.1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
